# crospi_application

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  configure_template.sh  generate_json_schemas_plugins.py  generate_json_schemas_tasks.bash  json_schema_bundler.py  package.xml
.github/workflows/: gitlab-mirror.yml
ala_reaching_nodes/ala_reaching_nodes/: autonomy_manager_node.py  g3_lateral_test_node.py  intent_estimator_node.py  mock_hmi_node.py  mock_static_hmi_node.py  target_blender_node.py  target_latch_node.py
applications/application_ala_reaching/: ala_reaching_system.launch.py  application_ala_reaching.setup.json  auto_off.sh  auto_on.sh  run_ala_minimal.sh  run_ala_task.sh  run_ala_v2.sh  safe_auto_off.sh  zero_twist.sh
applications/application_example_tutorials/: application_example_tutorials.launch.py  application_example_tutorials.setup.json
applications/application_example_ur10/: application_example_ur10.launch.py  application_example_ur10.setup.json
applications/application_example_ur10e/: application_example_ur10e.setup.json
example_nodes/: pose_msg_to_tf.py  sine_wave_tf.py
robot_models/robot_specifications/: kuka_iiwa.etasl.lua  ur10.etasl.lua  ur10e.etasl.lua
robot_models/urdf_models/robot_setups/kuka_iiwa/: rviz_config.rviz  use_case_setup_iiwa.urdf  use_case_setup_iiwa.urdf.xacro
robot_models/urdf_models/robot_setups/ur10/: robot_tools.urdf.xacro  rviz_config.rviz  use_case_setup_ur10.urdf  use_case_setup_ur10.urdf.xacro
robot_models/urdf_models/robot_setups/ur10e/: robot_tools.urdf.xacro  rviz_config.rviz  use_case_setup_ur10e.urdf  use_case_setup_ur10e.urdf.xacro
schemas/: blackboard-schema.json  etasl.json  iohandlers.json  robot.json
skill_specifications/libraries/: CMakeLists.txt  skill_library.schema.json
skill_specifications/libraries/ala_reaching_skill/: skill_library.json
skill_specifications/libraries/ala_reaching_skill/skill_specifications/: ala_reaching_skill.py
skill_specifications/libraries/ala_reaching_skill/tasks/: ala_reaching_skill.json
skill_specifications/libraries/skill_lib_example/: README.md  skill_library.json
skill_specifications/libraries/skill_lib_example/.github/workflows/: gitlab-mirror.yml
skill_specifications/libraries/skill_lib_example/skill_specifications/: skill_example.py
skill_specifications/libraries/skill_lib_example/tasks/: skill_example.json
task_specifications/libraries/: task_library.schema.json
task_specifications/libraries/ala_reaching_lib/: task_library.json
task_specifications/libraries/ala_reaching_lib/task_json_schemas/: ala_reach_assist_task.etasl.json
task_specifications/libraries/ala_reaching_lib/task_specifications/: ala_reach_assist_task.etasl.lua  ala_reaching_minimal.etasl.lua  ala_reaching_v2.etasl.lua  ala_reaching_v3_rvgf.etasl.lua  ala_reaching_v4_auto.etasl.lua  ala_reaching_v5_interactive.etasl.lua  ala_reaching_v5_paper_weights.etasl.lua  ala_reaching_v6_safe_interactive.etasl.lua
task_specifications/libraries/core_task_lib/: README.md  task_library.json
task_specifications/libraries/core_task_lib/.github/workflows/: gitlab-mirror.yml
task_specifications/libraries/core_task_lib/task_json_schemas/: follow_spline.etasl.json  idle.etasl.json  keep_relative_initial_pose.etasl.json  move_admittance.etasl.json  move_cartesianspace_absolute_pose.etasl.json  move_cartesianspace_relative.etasl.json  move_jointspace_trap.etasl.json  move_jointspace_trap_subset.etasl.json  move_joystick.etasl.json  readme.md
task_specifications/libraries/core_task_lib/task_specifications/: follow_spline.etasl.lua  idle.etasl.lua  keep_relative_initial_pose.etasl.lua  move_admittance.etasl.lua  move_cartesianspace_absolute_pose.etasl.lua  move_cartesianspace_relative.etasl.lua  move_jointspace_trap.etasl.lua  move_jointspace_trap_subset.etasl.lua  move_joystick.etasl.lua
task_specifications/libraries/core_task_lib/task_specifications/utilities/: utils_ts.lua
task_specifications/libraries/debug_lib/: LICENSE  README.md  task_library.json
task_specifications/libraries/debug_lib/.github/workflows/: gitlab-mirror.yml
task_specifications/libraries/debug_lib/task_json_schemas/: move_joystick_reading_sensor_vals_driver.etasl.json  move_sine_waves_jointspace.etasl.json
task_specifications/libraries/debug_lib/task_specifications/: move_joystick_reading_sensor_vals_driver.etasl.lua  move_sine_waves_jointspace.etasl.lua
task_specifications/libraries/dummy_lib/: README.md  task_library.json
task_specifications/libraries/dummy_lib/.github/workflows/: gitlab-mirror.yml
task_specifications/libraries/dummy_lib/task_json_schemas/: follow_external_frame.etasl.json  follow_external_vector.etasl.json
task_specifications/libraries/dummy_lib/task_specifications/: follow_external_frame.etasl.lua  follow_external_vector.etasl.lua
tutorial_examples/: start_a_task.py  tasks.json
